# ENGENHARIA-DE-MACHINE-LEARNING

./: README.md
projeto-kobe-ml/: README.md  pyproject.toml
projeto-kobe-ml/conf/base/: catalog.yml  parameters_separacao_treino_teste.yml  parameters_tratamento_dados.yml
projeto-kobe-ml/data/02_intermediate/: dados_tratados.parquet  prod_data_processed.parquet
projeto-kobe-ml/data/03_primary/: dados_teste.parquet  dados_treino.parquet
projeto-kobe-ml/data/06_models/: decision_tree.pkl  logistic_regression.pkl
projeto-kobe-ml/data/07_model_output/: predictions_prod.parquet
projeto-kobe-ml/data/08_reporting/: 0_dataset_info.txt
projeto-kobe-ml/src/projeto_kobe_ml/: __init__.py  __main__.py  dashboard.py  hooks.py  pipeline_registry.py  settings.py
projeto-kobe-ml/src/projeto_kobe_ml/pipelines/aplicacao/: nodes.py  pipeline.py
projeto-kobe-ml/src/projeto_kobe_ml/pipelines/separacao_treino_teste/: __init__.py  nodes.py  pipeline.py
projeto-kobe-ml/src/projeto_kobe_ml/pipelines/tratamento_dados/: nodes.py  pipeline.py
projeto-kobe-ml/src/projeto_kobe_ml/pipelines/treinamento/: nodes.py  pipeline.py
projeto-kobe-ml/tests/pipelines/separacao_treino_teste/: pipeline.py  test_pipeline.py
projeto-kobe-ml/tests/pipelines/tratamento_dados/: __init__.py  test_pipeline.py
projeto-kobe-ml/tests/pipelines/treinamento/: pipeline.py
