[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "projeto_kobe_ml"
readme = "README.md"
dynamic = [ "version",]
dependencies = [ "ipython>=8.10", "jupyterlab>=3.0", "notebook", "kedro~=0.19.12",]

[project.scripts]
projeto-kobe-ml = "projeto_kobe_ml.__main__:main"

[tool.kedro]
package_name = "projeto_kobe_ml"
project_name = "projeto-kobe-ml"
kedro_init_version = "0.19.12"
tools = "['Data Structure']"
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "projeto_kobe_ml.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
